--- a/resources/web/map/index.html
+++ b/resources/web/map/index.html
@@ -1,40 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <title>Vector Map Demo</title>
-    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no"/>
+    <!--    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"-->
+    <!--          integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="-->
+    <!--          crossorigin=""/>-->
+    <!--    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"-->
+    <!--            integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="-->
+    <!--            crossorigin=""></script>-->
     <script type="text/javascript" src="http://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.js"></script>
-    <link href="http://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css" rel="stylesheet" />
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-        }
-
-        #map {
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+    <link href="http://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css" rel="stylesheet"/>
+    <link href="css/style.css" rel="stylesheet"/>
 </head>
 <body>
 <div id="map"></div>
-<script type="text/javascript">
-    var map = new maplibregl.Map({
-        container: 'map',
-        style: 'https://tiles.stadiamaps.com/styles/alidade_smooth.json',  // Style URL; see our documentation for more options
-        center: [12, 53],  // Initial focus coordinate
-        zoom: 4
-    });
-
-    // MapLibre GL JS does not handle RTL text by default, so we recommend adding this dependency to fully support RTL rendering.
-    maplibregl.setRTLTextPlugin('https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-rtl-text/v0.2.1/mapbox-gl-rtl-text.js');
-
-    // Add zoom and rotation controls to the map.
-    map.addControl(new maplibregl.NavigationControl());
-</script>
+<script type="text/javascript" src="js/trajectory.js"></script>
 </body>
 </html>
