signals for position tracking

--- a/resources/web/map/index.html
+++ b/resources/web/map/index.html
@@ -16,5 +16,6 @@
 <body>
 <div id="map"></div>
 <script type="text/javascript" src="js/trajectory.js"></script>
+<script src="qrc:///qtwebchannel/qwebchannel.js"></script>
 </body>
 </html>
