--- a/resources/web/map/index.html
+++ b/resources/web/map/index.html
@@ -8,6 +8,7 @@
     <link href="css/style.css" rel="stylesheet"/>
 </head>
 <body>
+<canvas id="points"></canvas>
 <div id="map"></div>
 <script type="text/javascript" src="js/trajectory.js"></script>
 <script src="qrc:///qtwebchannel/qwebchannel.js"></script>
