--- a/resources/web/map/index.html
+++ b/resources/web/map/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no"/>
-    <script type="text/javascript" src="http://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.js"></script>
-    <link href="http://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css" rel="stylesheet"/>
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css' rel='stylesheet'/>
     <link href="css/style.css" rel="stylesheet"/>
 </head>
 <body>
+<canvas id="points"></canvas>
 <div id="map"></div>
-<script type="text/javascript" src="js/trajectory.js"></script>
+<script type="module" src="js/trajectory.js"></script>
 <script src="qrc:///qtwebchannel/qwebchannel.js"></script>
 </body>
 </html>
